# Compressed-Continuous-Computation

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  NOTES  README  README.md  build.sh  c3.cmake  contributors.txt  setup.py
c3/: CMakeLists.txt  Makefile  cmake_install.cmake
c3/lib_array/: CMakeLists.txt  array.h
c3/lib_clinalg/: CMakeLists.txt  diffusion.c  diffusion.h  dmrg.c  dmrg.h  dmrgprod.h  ft.c  ft.h  indmanage.c  qmarray.c  qmarray.h
c3/lib_clinalg/backup/: cross2d.c  elements.c
c3/lib_fft/: CMakeLists.txt  fft.c
c3/lib_funcs/: CMakeLists.txt  constelm.c  constelm.h  fapprox.c  fapprox.h  fourier.c  fourier.h  funcs_mixed.c  functions.c  functions.h  futil.h  fwrap.c  fwrap.h  hpoly.c  instructions.org  kernels.c  kernels.h  lib_funcs.h  linelm.c  linelm.h  monitoring.c  monitoring.h  oned_func_template.c  oned_func_template.c.TEMPLATE  piecewisepoly.c  piecewisepoly.h  polynomials.c  polynomials.h  wavelets.c  wavelets.h
c3/lib_interface/: CMakeLists.txt  approximate.c  approximate.h
c3/lib_linalg/: CMakeLists.txt  linalg.h  matrix_util.h
c3/lib_optimization/: CMakeLists.txt
c3/lib_probability/: CMakeLists.txt  lib_probability.h  probability.c  probability.h  probability_utils.c  probability_utils.h
c3/lib_quadrature/: CMakeLists.txt  htmltoh.py  legquadrules.c
c3/lib_stringmanip/: CMakeLists.txt
c3/lib_superlearn/: learning_options.c  learning_options.h  objective_functions.c  parameterization.c  parameterization.h  regress.c  regress.h  superlearn.h  superlearn_util.c  superlearn_util.h
c3/lib_tensdecomp/: CMakeLists.txt  convert.c  cross.h
c3/lib_tensor/: CMakeLists.txt  tensor.h
c3_cex/benchmarks/: CMakeLists.txt
c3_cex/examples/: CMakeLists.txt
c3_cex/test/: CMakeLists.txt
doc/: Doxyfile  (+3 more)
examples/: CMakeLists.txt
examples/cantilever/: CMakeLists.txt  cantilever.c
examples/diffusion_etc/: CMakeLists.txt
examples/discstudy/: CMakeLists.txt  genznd.c
examples/elliptic1d/: CMakeLists.txt  elliptic.c
examples/fourier1d/: fourier1d.c
examples/ft_like_a_tt/: README.org
examples/ft_paper/: CMakeLists.txt  genz2d.c  genznd.c  genznd_diff.c  local_gaussian_bump.c  sinrank2.c
examples/functests/: CMakeLists.txt  functest.c
examples/functional_regress/: CMakeLists.txt  fregress.c
examples/gauss/: CMakeLists.txt  gauss.c
examples/genquadtable/: CMakeLists.txt  qtable.c
examples/genzdisc2d/: CMakeLists.txt  genz2d.c
examples/hermite2d/: hermite2d.c
examples/linelm2d/: linelm2d.c
examples/linelm3d/: linelm3d.c
examples/online_learn/: CMakeLists.txt  online.c  plotting.gp
examples/opescale/: CMakeLists.txt  opescale.c
examples/quadstudy/: CMakeLists.txt  quad.c
examples/simlib/: CMakeLists.txt  simlib.c
examples/sinplusgauss/: CMakeLists.txt  sinrank2.c
examples/sinrank2/: CMakeLists.txt  sinrank2.c
examples/sinsumstudy/: CMakeLists.txt  sinsum.c
examples/threeprodtens/: CMakeLists.txt  tprodtens.c
src/: CMakeLists.txt  c3.h
src/lib_array/: CMakeLists.txt  array.c  array.h
src/lib_clinalg/: CMakeLists.txt  algs.c  algs.h  approximate.c  approximate.h  cross2d.c  cross2d.h  diffusion.c  diffusion.h  dmrg.c  dmrg.h  dmrgprod.c  dmrgprod.h  elements.c  elements.h  ft.c  ft.h  indmanage.c  indmanage.h  iterative.c  laplace.c  laplace.h  lib_clinalg.h  operators.c  operators.h  qmarray.c  qmarray.h  qmarray_qr.c  qmarray_qr.h  quasimatrix.c  quasimatrix.h  regress.c  regress.h
src/lib_fft/: CMakeLists.txt  fft.c  fft.h
src/lib_funcs/: CMakeLists.txt  constelm.c  constelm.h  fapprox.c  fapprox.h  fourier.c  fourier.h  funcs_mixed.c  funcs_not_standard.c  functions.c  functions.h  futil.h  fwrap.c  fwrap.h  hpoly.c  hpoly.h  kernels.c  kernels.h  legtens.c  lib_funcs.h  linelm.c  linelm.h  monitoring.c  monitoring.h  piecewisepoly.c  piecewisepoly.h  pivoting.c  pivoting.h  polynomials.c  polynomials.h  space.c  space.h  twodfunctions.c  twodfunctions.h  wavelets.c
src/lib_interface/: approximate.c  approximate.h  c3_interface.h
src/lib_linalg/: clapack.h  f2c.h  lib_linalg.h  linalg.c  linalg.h  matrix_util.c  matrix_util.h
src/lib_optimization/: CMakeLists.txt  lib_optimization.h  optimization.c  optimization.h
src/lib_probability/: lib_probability.h  probability.c  probability.h  probability_utils.c  probability_utils.h
src/lib_quadrature/: legquadrules.c  legquadrules.h  legquadrules2.c  lib_quadrature.h  mytoc.py  quadrature.c  quadrature.h
src/lib_stringmanip/: stringmanip.c  stringmanip.h
src/lib_superlearn/: CMakeLists.txt  learning_options.c  learning_options.h  lib_superlearn.h  objective_functions.c  objective_functions.h  online.c  online.h  parameterization.c  parameterization.h  regress.c  regress.h  superlearn.c  superlearn.h  superlearn_util.c  superlearn_util.h
src/lib_tensdecomp/: candecomp.c  candecomp.h  convert.c  convert_decomp.h  cross.c  cross.h  tensortrain.c  tensortrain.h  tt_integrate.c  tt_integrate.h  tt_multilinalg.c  tt_multilinalg.h
src/lib_tensor/: tensor.c  tensor.h
src/lib_twodfuncs/: CMakeLists.txt  twodfunctions.c  twodfunctions.h
test/lib_clinalg_test/: CMakeLists.txt  clinalg_test.c  clinalgtest.h  dmrg_test.c  ft_test.c  ftarray_test.c  main.c  qmarray_test.c  quasimatrix.c  regress_test.c  testfunctions.c  testfunctions.h
test/lib_funcs_test/: CMakeLists.txt  constelm_test.c  functest.h  kernel_test.c  linelm_test.c  main.c  other_test.c  piecewise_test.c  poly_test.c  testfunctions.c  testfunctions.h
test/lib_optimization_test/: AllMyTests.c  CMakeLists.txt  batchgrad_test.c  bfgs_test.c  lbfgs_test.c  opt_test.c  sgd_functions.c  sgd_functions.h  sgd_test.c  unc_test.c  uncon_test.c  uncon_test.h  unconstrained_functions.c  unconstrained_functions.h
test/lib_superlearn_test/: CMakeLists.txt  main.c  online_test.c  regress_test.c  suptest.h
utilities/regress/: CMakeLists.txt  regress.c
wrappers/python/: CMakeLists.txt  c3.i  c3.py  c3_wrap.c  c3py.py  clean.sh  pyregress_example.py  pytest.py  pytest_adapt.py  pytest_look_at_unis.py  pytest_small.py  python_caller.c  run.sh  setup.py  sobol_sensitivity.py
(+264 files in other folders)
