cmake_minimum_required (VERSION 2.6)

add_subdirectory(lib_stringmanip)
add_subdirectory(lib_array)
add_subdirectory(lib_linalg)
add_subdirectory(lib_clinalg)
add_subdirectory(lib_quadrature)
add_subdirectory(lib_funcs)
add_subdirectory(lib_tensor)
add_subdirectory(lib_tensdecomp)
add_subdirectory(lib_optimization)
add_subdirectory(lib_probability)
