cmake_minimum_required (VERSION 2.6)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

add_subdirectory(genquadtable)
add_subdirectory(threeprodtens)
add_subdirectory(gauss)
add_subdirectory(sinplusgauss)
add_subdirectory(quadstudy)
add_subdirectory(opescale)
add_subdirectory(elliptic1d)
add_subdirectory(simlib)
add_subdirectory(cantilever)
add_subdirectory(linelm2d)
add_subdirectory(linelm3d)
add_subdirectory(hermite2d)
add_subdirectory(functests)
add_subdirectory(functional_regress)
add_subdirectory(ft_paper)
add_subdirectory(ft_like_a_tt)
add_subdirectory(diffusion_etc)
add_subdirectory(fourier1d)
